--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -27,7 +27,7 @@ links = [
   name = "Ryan Horricks"
   email = "ryanhorricks@gmail.com"
   image = "img/profile.jpg"
-  headline = "Software Engineer"
+  headline = "Software Engineer. Musician. Raver. Rock Climber. Nomad."
   bio = "Web, Mobile, QA, Desktop, Electrical: A veritable jack of all technical trades."
 #   imageQuality = 96
 #   headline = "I'm only human"
