Update the front-page tagline, and author bio, to be more focused on my profession.

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -27,8 +27,8 @@ links = [
   name = "Ryan Horricks"
   email = "ryanhorricks@gmail.com"
   image = "img/profile.jpg"
-  headline = "Software Engineer. Musician. Raver. Rock Climber. Nomad."
-  bio = "Web, Mobile, QA, Desktop, Electrical: A veritable jack of all technical trades."
+  bio = "Full Stack Engineer - I make things for Mobile, Web, Desktop, and Embedded Applications using Ruby, Java, C#, Python, JavaScript - and whatever else the project requires."
+  headline = "Full Stack Developer - Software Engineer"
 #   imageQuality = 96
 #   headline = "I'm only human"
 #   bio = "A little bit about you"
