Hide the Blog (for now).

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,10 +15,10 @@
   pageRef = "portfolio"
   weight = 20
 
-[[main]]
-  name = "Blog"
-  pageRef = "blog"
-  weight = 10
+# [[main]]
+#   name = "Blog"
+#   pageRef = "blog"
+#   weight = 10
 
 #[[main]]
 #  name = "Parent"
