--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -20,6 +20,11 @@
   pageRef = "portfolio"
   weight = 20
 
+[[main]]
+  name = "Projects"
+  pageRef = "projects"
+  weight = 30
+
 # [[main]]
 #   name = "Blog"
 #   pageRef = "blog"
