--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -29,7 +29,7 @@ links = [
   email = "ryanhorricks@gmail.com"
   image = "img/profile.jpg"
   bio = "Engineer and Storyteller | I create solutions that bridge software, hardware, and human experience. With a passion for learning and a knack for problem-solving, I turn ideas into reality, driven by curiosity and a love for innovation."
-  headline = "Innovator and Engineer | Building Solutions Across Software, Hardware, and Life"
+  headline = "Senior Full Stack Engineer | Building Products, Startups, and Relationships."
 #   imageQuality = 96
 #   headline = "I'm only human"
 #   bio = "A little bit about you"
